fix navbar styling on mobile

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -32,6 +32,7 @@ html, body {
   margin-bottom: 0;
   .navbar-brand {
     padding: 0;
+    margin-right: 24px;
     img {
       height: 42px;
       margin-top: 14px;
