--- a/app/assets/stylesheets/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/_bootstrap_variables.scss
@@ -380,7 +380,7 @@ $navbar-default-brand-hover-bg:            transparent;
 
 // Navbar toggle
 $navbar-default-toggle-hover-bg:           darken($navbar-default-bg, 10%);
-$navbar-default-toggle-icon-bar-bg:        #fff;
+$navbar-default-toggle-icon-bar-bg:        black;
 $navbar-default-toggle-border-color:       darken($navbar-default-bg, 10%);
 
 
